fix: align buttons inHome page to the center when siza of the page is less than 572px

--- a/graphiql/src/pages/css/home/index.css
+++ b/graphiql/src/pages/css/home/index.css
@@ -115,4 +115,8 @@
   .team__text {
     text-align: center;
   }
+
+  .welcome__message-block .welcome__buttons {
+    justify-content: center;
+  }
 }
